assets/styles/theme.less
// To fix Sign Out Button padding
.navbar-default .btn-link {
  padding: 0;
}
// Make cursor a pointer rather than a text cursor
a {
  cursor: pointer;
}
// Align dropdown menus so that right-most side of modal is flush with text
.sign-up-dropdown {
  left: -190px;
}
.sign-in-dropdown {
  left: -190px;
}
.change-password-dropdown {
  left: -120px;
}
// Pull price span to overlay on top right of image
.price-container {
  top: 0;
  right: 0;
}
// Add margin to container so that there is room between images and footer
.container-page {
  margin-bottom: 30px;
}
.footer{
  margin-top: 50px;
}
// Remove margin so that footer text is centered inside footer div
.footer-text {
  margin: 0;
  padding-left: 20px;
  padding-right: 20px;
}
// Remove margin to span full page
#content {
  margin: 0;
}
.media {
  margin: 2px 2px 2px 2px;
  // border-top: 2px solid #000;
  // border-bottom: 2px solid #000;
}
.row-0 {
  .make-row();
  .col-0-0 {
    .make-sm-column(10);
  }
  .col-0-1 {
    .make-sm-column-offset(1);
    .make-sm-column(1);
  }
border: 2px solid #000;
padding-top: 2px;
margin-bottom: 50px;
}
.media-object {
	height: 70px;
}
.cart-contents {
  width: 66.67%;
}
.cart-row {
  margin: 0 80px 0 80px;
}
.cart-dropdown {
  max-width: 100px;
}
.update-button {
  margin: 0;
}
.form-control {
  cursor: pointer;
  min-width: 220px;
}
h1 {
  margin: 0 40px 0 40px;
}
.checkout-content {
  margin: 0 20px 0 40px;
}
.credit-card-content {
  margin-left: 20px;
}
#main-nav{

  @media (max-width: 767px) {
    padding: 0 15px 0 15px;
  }
}
#content > div > div.row {
  .show-product-padding {
    padding-right: 80px;
  }
  @media (max-width: 767px) {

    padding: 0 15px 0 15px;

    .show-product-padding {
      padding-right: 0;
    }
    #add-to-cart-button {
      .pull-left();
  }
.paging.clearfix.text-center{
  padding-top: 50px;
  margin-bottom: 0;
  }
  footer.footer{
  padding-top: 25px;
  }
}
}
.past-order-content, .media {
  padding: 0 20px 0 20px;
}
#cart-message {
  padding-left: 200px;
}

